[project]
name = "sukaldari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gorka Eraña", email = "eranagorka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "rich>=13.9.4",
    "ruff>=0.9.6",
]
